# pytest-regressions-stubs

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
pytest_regressions-stubs/: __init__.py  __init__.pyi  common.py  common.pyi  data_regression.py  data_regression.pyi  dataframe_regression.pyi  file_regression.py  file_regression.pyi  image_regression.py  image_regression.pyi  num_regression.py  num_regression.pyi  plugin.py  plugin.pyi  testing.py  testing.pyi
tests/: requirements.txt  test_data_regression.py  test_file_regression.py  test_grids.py  test_image_regression.py  test_num_regression.py
