[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "pytest-regressions-stubs"
version = "2.0.0"
description = "Type stubs for pytest-regressions"
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/pytest-regressions-stubs"
"Issue Tracker" = "https://github.com/domdfcoding/pytest-regressions-stubs/issues"
"Source Code" = "https://github.com/domdfcoding/pytest-regressions-stubs"

[tool.whey]
base-classifiers = [
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
]
python-versions = [ "3.6", "3.7", "3.8",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "pytest_regressions-stubs"
