[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "pytest-regressions-stubs"
version = "2.0.0"
description = "Type stubs for pytest-regressions"
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/pytest-regressions-stubs"
"Issue Tracker" = "https://github.com/domdfcoding/pytest-regressions-stubs/issues"
"Source Code" = "https://github.com/domdfcoding/pytest-regressions-stubs"

[tool.whey]
base-classifiers = [
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
]
python-versions = [ "3.6", "3.7", "3.8",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "pytest_regressions-stubs"

[tool.mypy]
python_version = "3.6"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
